--- a/package.json
+++ b/package.json
@@ -1,27 +1,14 @@
 {
-  "name": "brok-test",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "name": "node-starter",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ohatland/brok-test.git"
-  },
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ohatland/brok-test/issues"
-  },
-  "homepage": "https://github.com/ohatland/brok-test#readme",
   "dependencies": {
-    "@brok/sdk": "^0.19.0"
+    "@brok/sdk": "^0.14.0"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
+  "stackblitz": {
+    "startCommand": "node index.js"
   }
 }
